crosshair/examples/deal/bugs_detected/list_to_dict.out
list_to_dict.py:7: error: false when calling list_to_dict(items = (2, 2)) (which returns {2: 2}
